// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-nav should render with _label="Nav Label" _links=[{"_label":"Homepage","_href":"#"},{"_label":"Nav - aria-current","_href":"#","_active":true},{"_label":"3 Navigation point","_href":"#","_icons":"codicon codicon-home","_children":[{"_label":"3.1 Navigation point","_icons":"codicon codicon-home","_href":"#"}]},{"_label":"6 Keine eigene Seite, mit Icon","_icons":"codicon codicon-squirrel"}] _hasCompactButton=false 1`] = `
<kol-nav>
  <template shadowrootmode="open">
    <div class="kol-nav kol-nav--vertical">
      <nav aria-label="Nav Label" class="kol-nav__navigation" id="nav">
        <ul class="kol-nav__list kol-nav__list--vertical" data-deep="0">
          <li class="kol-nav__list-item">
            <div class="kol-nav__entry-wrapper">
              <kol-link-wc _href="#" _label="Homepage" class="kol-nav__entry kol-nav__entry--link"></kol-link-wc>
            </div>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--active">
            <div class="kol-nav__entry-wrapper">
              <kol-link-wc _active="" _href="#" _label="Nav - aria-current" class="kol-nav__entry kol-nav__entry--link"></kol-link-wc>
            </div>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--has-children">
            <div class="kol-nav__entry-wrapper">
              <kol-link-wc _href="#" _label="3 Navigation point" class="kol-nav__entry kol-nav__entry--link"></kol-link-wc>
              <kol-button-wc _hidelabel="" _icons="codicon codicon-add" _label="kol-nav-label-open" class="kol-nav__expand-button"></kol-button-wc>
            </div>
          </li>
          <li class="kol-nav__list-item">
            <div class="kol-nav__entry-wrapper">
              <kol-button-wc _label="6 Keine eigene Seite, mit Icon" class="kol-nav__entry kol-nav__entry--button"></kol-button-wc>
            </div>
          </li>
        </ul>
      </nav>
    </div>
  </template>
</kol-nav>
`;

exports[`kol-nav should render with _label="Nav Label" _links=[{"_label":"Homepage","_href":"#"},{"_label":"Nav - aria-current","_href":"#","_active":true},{"_label":"3 Navigation point","_href":"#","_icons":"codicon codicon-home","_children":[{"_label":"3.1 Navigation point","_icons":"codicon codicon-home","_href":"#"}]},{"_label":"6 Keine eigene Seite, mit Icon","_icons":"codicon codicon-squirrel"}] _hasCompactButton=true 1`] = `
<kol-nav>
  <template shadowrootmode="open">
    <div class="kol-nav kol-nav--vertical">
      <nav aria-label="Nav Label" class="kol-nav__navigation" id="nav">
        <ul class="kol-nav__list kol-nav__list--vertical" data-deep="0">
          <li class="kol-nav__list-item">
            <div class="kol-nav__entry-wrapper">
              <kol-link-wc _href="#" _label="Homepage" class="kol-nav__entry kol-nav__entry--link"></kol-link-wc>
            </div>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--active">
            <div class="kol-nav__entry-wrapper">
              <kol-link-wc _active="" _href="#" _label="Nav - aria-current" class="kol-nav__entry kol-nav__entry--link"></kol-link-wc>
            </div>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--has-children">
            <div class="kol-nav__entry-wrapper">
              <kol-link-wc _href="#" _label="3 Navigation point" class="kol-nav__entry kol-nav__entry--link"></kol-link-wc>
              <kol-button-wc _hidelabel="" _icons="codicon codicon-add" _label="kol-nav-label-open" class="kol-nav__expand-button"></kol-button-wc>
            </div>
          </li>
          <li class="kol-nav__list-item">
            <div class="kol-nav__entry-wrapper">
              <kol-button-wc _label="6 Keine eigene Seite, mit Icon" class="kol-nav__entry kol-nav__entry--button"></kol-button-wc>
            </div>
          </li>
        </ul>
      </nav>
      <div class="kol-nav__compact">
        <kol-button _ariacontrols="nav" _ariaexpanded="" _hidelabel="" _icons="codicon codicon-chevron-left" _label="kol-nav-minimize" _tooltipalign="right" _variant="ghost"></kol-button>
      </div>
    </div>
  </template>
</kol-nav>
`;

exports[`kol-nav should render with _label="Nav Label" _links=[{"_label":"Homepage","_href":"#"},{"_label":"Nav - aria-current","_href":"#","_active":true},{"_label":"3 Navigation point","_href":"#","_icons":"codicon codicon-home","_children":[{"_label":"3.1 Navigation point","_icons":"codicon codicon-home","_href":"#"}]},{"_label":"6 Keine eigene Seite, mit Icon","_icons":"codicon codicon-squirrel"}] _hasIconsWhenExpanded=false 1`] = `
<kol-nav>
  <template shadowrootmode="open">
    <div class="kol-nav kol-nav--vertical">
      <nav aria-label="Nav Label" class="kol-nav__navigation" id="nav">
        <ul class="kol-nav__list kol-nav__list--vertical" data-deep="0">
          <li class="kol-nav__list-item">
            <div class="kol-nav__entry-wrapper">
              <kol-link-wc _href="#" _label="Homepage" class="kol-nav__entry kol-nav__entry--link"></kol-link-wc>
            </div>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--active">
            <div class="kol-nav__entry-wrapper">
              <kol-link-wc _active="" _href="#" _label="Nav - aria-current" class="kol-nav__entry kol-nav__entry--link"></kol-link-wc>
            </div>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--has-children">
            <div class="kol-nav__entry-wrapper">
              <kol-link-wc _href="#" _label="3 Navigation point" class="kol-nav__entry kol-nav__entry--link"></kol-link-wc>
              <kol-button-wc _hidelabel="" _icons="codicon codicon-add" _label="kol-nav-label-open" class="kol-nav__expand-button"></kol-button-wc>
            </div>
          </li>
          <li class="kol-nav__list-item">
            <div class="kol-nav__entry-wrapper">
              <kol-button-wc _label="6 Keine eigene Seite, mit Icon" class="kol-nav__entry kol-nav__entry--button"></kol-button-wc>
            </div>
          </li>
        </ul>
      </nav>
    </div>
  </template>
</kol-nav>
`;

exports[`kol-nav should render with _label="Nav Label" _links=[{"_label":"Homepage","_href":"#"},{"_label":"Nav - aria-current","_href":"#","_active":true},{"_label":"3 Navigation point","_href":"#","_icons":"codicon codicon-home","_children":[{"_label":"3.1 Navigation point","_icons":"codicon codicon-home","_href":"#"}]},{"_label":"6 Keine eigene Seite, mit Icon","_icons":"codicon codicon-squirrel"}] _hasIconsWhenExpanded=true 1`] = `
<kol-nav>
  <template shadowrootmode="open">
    <div class="kol-nav kol-nav--vertical">
      <nav aria-label="Nav Label" class="kol-nav__navigation" id="nav">
        <ul class="kol-nav__list kol-nav__list--vertical" data-deep="0">
          <li class="kol-nav__list-item">
            <div class="kol-nav__entry-wrapper">
              <kol-link-wc _href="#" _label="Homepage" class="kol-nav__entry kol-nav__entry--link"></kol-link-wc>
            </div>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--active">
            <div class="kol-nav__entry-wrapper">
              <kol-link-wc _active="" _href="#" _label="Nav - aria-current" class="kol-nav__entry kol-nav__entry--link"></kol-link-wc>
            </div>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--has-children">
            <div class="kol-nav__entry-wrapper">
              <kol-link-wc _href="#" _icons="codicon codicon-home" _label="3 Navigation point" class="kol-nav__entry kol-nav__entry--link"></kol-link-wc>
              <kol-button-wc _hidelabel="" _icons="codicon codicon-add" _label="kol-nav-label-open" class="kol-nav__expand-button"></kol-button-wc>
            </div>
          </li>
          <li class="kol-nav__list-item">
            <div class="kol-nav__entry-wrapper">
              <kol-button-wc _icons="codicon codicon-squirrel" _label="6 Keine eigene Seite, mit Icon" class="kol-nav__entry kol-nav__entry--button"></kol-button-wc>
            </div>
          </li>
        </ul>
      </nav>
    </div>
  </template>
</kol-nav>
`;

exports[`kol-nav should render with _label="Nav Label" _links=[{"_label":"Homepage","_href":"#"},{"_label":"Nav - aria-current","_href":"#","_active":true},{"_label":"3 Navigation point","_href":"#","_icons":"codicon codicon-home","_children":[{"_label":"3.1 Navigation point","_icons":"codicon codicon-home","_href":"#"}]},{"_label":"6 Keine eigene Seite, mit Icon","_icons":"codicon codicon-squirrel"}] _hideLabel=false 1`] = `
<kol-nav>
  <template shadowrootmode="open">
    <div class="kol-nav kol-nav--vertical">
      <nav aria-label="Nav Label" class="kol-nav__navigation" id="nav">
        <ul class="kol-nav__list kol-nav__list--vertical" data-deep="0">
          <li class="kol-nav__list-item">
            <div class="kol-nav__entry-wrapper">
              <kol-link-wc _href="#" _label="Homepage" class="kol-nav__entry kol-nav__entry--link"></kol-link-wc>
            </div>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--active">
            <div class="kol-nav__entry-wrapper">
              <kol-link-wc _active="" _href="#" _label="Nav - aria-current" class="kol-nav__entry kol-nav__entry--link"></kol-link-wc>
            </div>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--has-children">
            <div class="kol-nav__entry-wrapper">
              <kol-link-wc _href="#" _label="3 Navigation point" class="kol-nav__entry kol-nav__entry--link"></kol-link-wc>
              <kol-button-wc _hidelabel="" _icons="codicon codicon-add" _label="kol-nav-label-open" class="kol-nav__expand-button"></kol-button-wc>
            </div>
          </li>
          <li class="kol-nav__list-item">
            <div class="kol-nav__entry-wrapper">
              <kol-button-wc _label="6 Keine eigene Seite, mit Icon" class="kol-nav__entry kol-nav__entry--button"></kol-button-wc>
            </div>
          </li>
        </ul>
      </nav>
    </div>
  </template>
</kol-nav>
`;

exports[`kol-nav should render with _label="Nav Label" _links=[{"_label":"Homepage","_href":"#"},{"_label":"Nav - aria-current","_href":"#","_active":true},{"_label":"3 Navigation point","_href":"#","_icons":"codicon codicon-home","_children":[{"_label":"3.1 Navigation point","_icons":"codicon codicon-home","_href":"#"}]},{"_label":"6 Keine eigene Seite, mit Icon","_icons":"codicon codicon-squirrel"}] _hideLabel=true 1`] = `
<kol-nav>
  <template shadowrootmode="open">
    <div class="kol-nav kol-nav--is-compact kol-nav--vertical">
      <nav aria-label="Nav Label" class="kol-nav__navigation" id="nav">
        <ul class="kol-nav__list kol-nav__list--vertical" data-deep="0">
          <li class="kol-nav__list-item">
            <div class="kol-nav__entry-wrapper">
              <kol-link-wc _hidelabel="" _href="#" _icons="codicon codicon-symbol-method" _label="Homepage" class="kol-nav__entry kol-nav__entry--link"></kol-link-wc>
            </div>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--active">
            <div class="kol-nav__entry-wrapper">
              <kol-link-wc _active="" _hidelabel="" _href="#" _icons="codicon codicon-symbol-method" _label="Nav - aria-current" class="kol-nav__entry kol-nav__entry--link"></kol-link-wc>
            </div>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--has-children">
            <div class="kol-nav__entry-wrapper">
              <kol-link-wc _hidelabel="" _href="#" _icons="codicon codicon-home" _label="3 Navigation point" class="kol-nav__entry kol-nav__entry--link"></kol-link-wc>
              <kol-button-wc _hidelabel="" _icons="codicon codicon-add" _label="kol-nav-label-open" class="kol-nav__expand-button"></kol-button-wc>
            </div>
          </li>
          <li class="kol-nav__list-item">
            <div class="kol-nav__entry-wrapper">
              <kol-button-wc _hidelabel="" _icons="codicon codicon-squirrel" _label="6 Keine eigene Seite, mit Icon" class="kol-nav__entry kol-nav__entry--button"></kol-button-wc>
            </div>
          </li>
        </ul>
      </nav>
    </div>
  </template>
</kol-nav>
`;

exports[`kol-nav should render with _label="Nav Label" _links=[{"_label":"Homepage","_href":"#"},{"_label":"Nav - aria-current","_href":"#","_active":true},{"_label":"3 Navigation point","_href":"#","_icons":"codicon codicon-home","_children":[{"_label":"3.1 Navigation point","_icons":"codicon codicon-home","_href":"#"}]},{"_label":"6 Keine eigene Seite, mit Icon","_icons":"codicon codicon-squirrel"}] 1`] = `
<kol-nav>
  <template shadowrootmode="open">
    <div class="kol-nav kol-nav--vertical">
      <nav aria-label="Nav Label" class="kol-nav__navigation" id="nav">
        <ul class="kol-nav__list kol-nav__list--vertical" data-deep="0">
          <li class="kol-nav__list-item">
            <div class="kol-nav__entry-wrapper">
              <kol-link-wc _href="#" _label="Homepage" class="kol-nav__entry kol-nav__entry--link"></kol-link-wc>
            </div>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--active">
            <div class="kol-nav__entry-wrapper">
              <kol-link-wc _active="" _href="#" _label="Nav - aria-current" class="kol-nav__entry kol-nav__entry--link"></kol-link-wc>
            </div>
          </li>
          <li class="kol-nav__list-item kol-nav__list-item--has-children">
            <div class="kol-nav__entry-wrapper">
              <kol-link-wc _href="#" _label="3 Navigation point" class="kol-nav__entry kol-nav__entry--link"></kol-link-wc>
              <kol-button-wc _hidelabel="" _icons="codicon codicon-add" _label="kol-nav-label-open" class="kol-nav__expand-button"></kol-button-wc>
            </div>
          </li>
          <li class="kol-nav__list-item">
            <div class="kol-nav__entry-wrapper">
              <kol-button-wc _label="6 Keine eigene Seite, mit Icon" class="kol-nav__entry kol-nav__entry--button"></kol-button-wc>
            </div>
          </li>
        </ul>
      </nav>
    </div>
  </template>
</kol-nav>
`;
